--- a/ejemplo_clase/marvel/templates/e-commerce/wish.html
+++ b/ejemplo_clase/marvel/templates/e-commerce/wish.html
@@ -7,6 +7,7 @@
 
 
 <h1>{{user.username}} esta es tu lista de favoritos.</h1>
+<!-- <h1>{{user.usernam}} esta es tu lista de favoritos.</h1> -->
 
 <table>
 
