--- a/ejemplo_clase/marvel/staticfiles/e-commerce/css/base.css
+++ b/ejemplo_clase/marvel/staticfiles/e-commerce/css/base.css
@@ -133,3 +133,26 @@ font-size: 20px;
 a[href*="inove"]{
     color:rgb(54, 190, 88);
 }
+
+
+#graph-container{
+    text-align: left;
+    display: grid;
+    grid-template-columns: 70% 30%;
+}
+
+#plotly-graph{
+    width: 95%;
+}
+
+#plotly-img{
+    width: 100%;
+    border-radius: 10px;
+    padding: 10px;
+}
+#plotly-img img{
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(24, 24, 24, 0.925);
+    padding: 10px;
+}
