--- a/ejemplo_clase/marvel/templates/e-commerce/index.html
+++ b/ejemplo_clase/marvel/templates/e-commerce/index.html
@@ -68,8 +68,8 @@
 <!-- Ejemplo de paginado con un bucle:
 {% for page in page_obj.paginator.page_range %}
     <a href="?page={{page}}">{{page}}</a>
-{% endfor %}
-     -->
+{% endfor %} -->
+    
 
 
 {% endblock %}
